test/cases/negative/existing6.jsx
import { computed } from 'vue'

const a = computed(() => /^(https?:\/\/|\/\/)/.test(props.to))
